Enhancements in footer and customization: - Improved footer design and customization. - Expanded general configuration settings. - Optimized the customization system. - Added the landing page. - Added Terms and Conditions pages. - Implemented dynamic icon import for categories. - Developed a category system. - Improved the authentication system.

--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -32,7 +32,7 @@
   "filterBy": "Filtrar por",
   "sortBy": "Ordenar por",
   "dashboard": "Panel de Control",
-  
+
   "toggleSidebar": "Alternar barra lateral",
   "logo": "Logo",
   "myEcommerce": "Mi E-commerce",
@@ -53,24 +53,110 @@
   "exampleText": "Este es un texto de ejemplo para mostrar cómo se verá el contenido en el idioma seleccionado.",
   "exampleButton": "Botón de ejemplo",
 
+  "stock": "Existencias",
+  "clothing": "Ropa",
+  "books": "Libros",
+
   "addNewProduct": "Añadir Nuevo Producto",
   "editProduct": "Editar Producto",
   "productName": "Nombre del Producto",
+  "description": "Descripción",
   "category": "Categoría",
-  "stock": "Existencias",
+  "selectCategory": "Seleccionar categoría",
+  "electronics": "Electrónica",
+  "jewelery": "Joyería",
+  "menClothing": "Ropa de Hombre",
+  "womenClothing": "Ropa de Mujer",
+  "productImage": "Imagen del Producto",
+  "dragDropImage": "Arrastra y suelta una imagen aquí",
+  "or": "o",
+  "browseFiles": "Explorar Archivos",
+  "update": "Actualizar",
+  "add": "Añadir",
+  "productAdded": "Producto añadido exitosamente",
+  "productUpdated": "Producto actualizado exitosamente",
+  "productDeleted": "Producto eliminado exitosamente",
+  "confirmDelete": "¿Estás seguro de que quieres eliminar este producto?",
+  "errorLoadingProducts": "Error al cargar los productos",
+  "image": "Imagen",
+  "name": "Nombre",
   "actions": "Acciones",
   "edit": "Editar",
   "delete": "Eliminar",
-  "update": "Actualizar",
-  "add": "Añadir",
-  "selectCategory": "Seleccionar categoría",
-  "electronics": "Electrónica",
-  "clothing": "Ropa",
-  "books": "Libros",
-  "confirmDelete": "¿Estás seguro de que quieres eliminar este producto?",
-  "productAdded": "Producto añadido con éxito",
-  "productUpdated": "Producto actualizado con éxito",
-  "productDeleted": "Producto eliminado con éxito",
-  "errorLoadingProducts": "Error al cargar los productos",
-  "name": "Nombre"
+  "selectImage": "Seleccionar Imagen",
+  "imageSelected": "Imagen seleccionada con éxito",
+
+  "userProfile": "Perfil de Usuario",
+  "email": "Correo Electrónico",
+  "editProfile": "Editar Perfil",
+  "accountInfo": "Información de la Cuenta",
+  "memberSince": "Miembro Desde",
+  "lastLogin": "Último Inicio de Sesión",
+  "deleteAccount": "Eliminar Cuenta",
+  "profileUpdated": "Perfil Actualizado Exitosamente",
+  "updateError": "Error al Actualizar el Perfil",
+  "filters": "Filtros",
+
+  "clearFilters": "Limpiar Filtros",
+  "priceRange": "Rango de Precio",
+  "select": "Seleccionar",
+  "priceLowToHigh": "Precio: Menor a Mayor",
+  "priceHighToLow": "Precio: Mayor a Menor",
+  "nameAToZ": "Nombre: A a Z",
+  "nameZToA": "Nombre: Z a A",
+  "all": "Todos",
+
+  "usefulLinks": "Enlaces útiles",
+  "aboutUs": "Sobre nosotros",
+  "contactUs": "Contáctanos",
+  "faq": "Preguntas frecuentes",
+  "followUs": "Síguenos",
+  "termsAndConditions": "Términos y Condiciones",
+  "introduction": "Introducción",
+  "termsIntroduction": "Bienvenido a nuestra plataforma. Al acceder y utilizar este servicio, usted acepta cumplir y estar sujeto a los siguientes términos y condiciones de uso.",
+  "useOfService": "Uso del Servicio",
+  "useOfServiceDescription": "Nuestro servicio está diseñado para proporcionar una experiencia de compra en línea segura y satisfactoria. Al utilizar nuestro servicio, usted se compromete a:",
+  "useOfServiceItem1": "Proporcionar información precisa y completa al crear una cuenta o realizar una compra.",
+  "useOfServiceItem2": "Utilizar el servicio de manera ética y legal.",
+  "useOfServiceItem3": "No interferir con el funcionamiento normal del sitio web o intentar acceder a áreas restringidas.",
+  "privacyPolicy": "Política de Privacidad",
+  "privacyPolicyDescription": "Su privacidad es importante para nosotros. Consulte nuestra Política de Privacidad para entender cómo recopilamos, usamos y protegemos su información personal.",
+  "intellectualProperty": "Propiedad Intelectual",
+  "intellectualPropertyDescription": "Todo el contenido presente en este sitio web, incluyendo textos, gráficos, logotipos, imágenes y software, está protegido por derechos de autor y otras leyes de propiedad intelectual.",
+  "limitationOfLiability": "Limitación de Responsabilidad",
+  "limitationOfLiabilityDescription": "Hacemos todo lo posible para garantizar la precisión y disponibilidad de nuestro servicio, pero no podemos garantizar que esté libre de errores o interrupciones. No seremos responsables por daños indirectos, incidentales o consecuentes.",
+  "governingLaw": "Ley Aplicable",
+  "governingLawDescription": "Estos términos y condiciones se regirán e interpretarán de acuerdo con las leyes del país donde está registrada nuestra empresa, sin tener en cuenta sus disposiciones sobre conflictos de leyes.",
+  "backToHome": "Volver al inicio",
+
+  "aboutUsTitle": "Sobre Nuestra Empresa",
+  "ourHistory": "Nuestra Historia",
+  "historyText": "Fundada en [año], nuestra empresa comenzó con una idea simple: [describe la idea inicial]. Desde entonces, hemos crecido hasta convertirnos en [describe el estado actual de la empresa].",
+  "learnMore": "Saber Más",
+  "ourMission": "Nuestra Misión",
+  "missionText": "Nuestra misión es [describe la misión de tu empresa]. Nos esforzamos por [menciona los objetivos principales].",
+  "ourValues": "Nuestros Valores",
+  "teamwork": "Trabajo en Equipo",
+  "teamworkDesc": "Creemos en el poder de la colaboración y el apoyo mutuo.",
+  "innovation": "Innovación",
+  "innovationDesc": "Buscamos constantemente nuevas formas de mejorar y superar límites.",
+  "integrity": "Integridad",
+  "integrityDesc": "Mantenemos los más altos estándares de honestidad y comportamiento ético.",
+  "sustainability": "Sostenibilidad",
+  "sustainabilityDesc": "Estamos comprometidos con prácticas responsables con el medio ambiente.",
+  "joinOurTeam": "Únete a Nuestro Equipo",
+  "joinTeamText": "Siempre estamos buscando personas talentosas para unirse a nuestro equipo en crecimiento.",
+  "viewOpenings": "Ver Posiciones Abiertas",
+
+  "storeInfo": "Información de la Tienda",
+  "customerService": "Atención al Cliente",
+  "myAccount": "Mi Cuenta",
+  "socialLinks": "Redes Sociales",
+  "contact": "Contacto",
+  "address": "Dirección",
+  "phone": "Teléfono",
+  "footerTab": "Footer",
+  "addItem": "Añadir Item",
+  "url": "URL",
+  "contactInfo": "Información de Contacto"
 }
