--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -32,31 +32,95 @@
   "filterBy": "Filter by",
   "sortBy": "Sort by",
   "dashboard": "Dashboard",
-  
+
   "toggleSidebar": "Toggle sidebar",
   "logo": "Logo",
   "myEcommerce": "My E-commerce",
   "searchProducts": "Search products",
   "allRightsReserved": "All rights reserved",
 
+  "stock": "Stock",
+  "clothing": "Clothing",
+  "books": "Books",
+
   "addNewProduct": "Add New Product",
   "editProduct": "Edit Product",
   "productName": "Product Name",
+  "description": "Description",
   "category": "Category",
-  "stock": "Stock",
-  "actions": "Actions",
-  "edit": "Edit",
-  "delete": "Delete",
-  "update": "Update",
-  "add": "Add",
   "selectCategory": "Select category",
   "electronics": "Electronics",
-  "clothing": "Clothing",
-  "books": "Books",
-  "confirmDelete": "Are you sure you want to delete this product?",
+  "jewelery": "Jewelery",
+  "menClothing": "Men's Clothing",
+  "womenClothing": "Women's Clothing",
+  "productImage": "Product Image",
+  "dragDropImage": "Drag and drop an image here",
+  "or": "or",
+  "browseFiles": "Browse Files",
+  "update": "Update",
+  "add": "Add",
   "productAdded": "Product added successfully",
   "productUpdated": "Product updated successfully",
   "productDeleted": "Product deleted successfully",
+  "confirmDelete": "Are you sure you want to delete this product?",
   "errorLoadingProducts": "Error loading products",
-  "name": "Name"
+  "image": "Image",
+  "name": "Name",
+  "actions": "Actions",
+  "edit": "Edit",
+  "delete": "Delete",
+  "selectImage": "Select Image",
+  "imageSelected": "Image selected successfully",
+
+  "userProfile": "User Profile",
+  "email": "Email",
+  "editProfile": "Edit Profile",
+  "saveChanges": "Save Changes",
+  "accountInfo": "Account Information",
+  "memberSince": "Member Since",
+  "lastLogin": "Last Login",
+  "deleteAccount": "Delete Account",
+  "profileUpdated": "Profile Updated Successfully",
+  "updateError": "Error Updating Profile",
+
+  "filters": "Filters",
+  "clearFilters": "Clear Filters",
+  "priceRange": "Price Range",
+  "select": "Select",
+  "priceLowToHigh": "Price: Low to High",
+  "priceHighToLow": "Price: High to Low",
+  "nameAToZ": "Name: A to Z",
+  "nameZToA": "Name: Z to A",
+  "all": "All",
+
+  "aboutUsTitle": "About Our Company",
+  "ourHistory": "Our History",
+  "historyText": "Founded in [year], our company began with a simple idea: [describe the initial idea]. Since then, we have grown to become [describe the current state of the company].",
+  "learnMore": "Learn More",
+  "ourMission": "Our Mission",
+  "missionText": "Our mission is to [describe your company's mission]. We strive to [mention main objectives].",
+  "ourValues": "Our Values",
+  "teamwork": "Teamwork",
+  "teamworkDesc": "We believe in the power of collaboration and mutual support.",
+  "innovation": "Innovation",
+  "innovationDesc": "We constantly seek new ways to improve and push boundaries.",
+  "integrity": "Integrity",
+  "integrityDesc": "We uphold the highest standards of honesty and ethical behavior.",
+  "sustainability": "Sustainability",
+  "sustainabilityDesc": "We are committed to environmentally responsible practices.",
+  "joinOurTeam": "Join Our Team",
+  "joinTeamText": "We're always looking for talented individuals to join our growing team.",
+  "viewOpenings": "View Open Positions",
+
+  "storeInfo": "Store Information",
+  "customerService": "Customer Service",
+  "myAccount": "My Account",
+  "socialLinks": "Social Links",
+  "contact": "Contact",
+  "address": "Address",
+  "phone": "Phone",
+  "footerTab": "Footer",
+  "addItem": "Add Item",
+  "url": "URL",
+  "contactInfo": "Contact Information"
 }
