The document load was adjusted for customs clearance and passes.

--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -44,7 +44,7 @@
   "enterStoreDescription": "Ingrese la descripción de la tienda",
   "uploadLogo": "Subir Logo",
   "logoPreview": "Vista previa del logo",
-  "languageAndLocalization": "Idioma y Localización",
+  "language": "Idioma",
   "appearance": "Apariencia",
   "saveChanges": "Guardar Cambios",
 
