Updated language management system and implemented configuration and handling for the landing page.

--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -1,162 +1,185 @@
 {
-  "storeTitle": "Título de la Tienda",
-  "storeDescription": "Descripción de la Tienda",
-  "storeLogo": "Logo de la Tienda",
-  "dropImageHere": "Suelta la imagen aquí ...",
-  "dragAndDropImage": "Arrastra y suelta una imagen aquí, o haz clic para seleccionar una",
-  "mainLanguage": "Idioma Principal",
-  "currency": "Moneda",
-  "darkMode": "Modo Oscuro",
-  "save": "Guardar",
-  "cancel": "Cancelar",
-  "addToCart": "Añadir al Carrito",
-  "removeFromCart": "Quitar del Carrito",
-  "checkout": "Finalizar Compra",
-  "search": "Buscar",
-  "login": "Iniciar Sesión",
-  "logout": "Cerrar Sesión",
-  "register": "Registrarse",
-  "profile": "Perfil",
-  "settings": "Configuración",
-  "products": "Productos",
-  "categories": "Categorías",
-  "orders": "Pedidos",
-  "welcome": "Bienvenido",
-  "price": "Precio",
-  "quantity": "Cantidad",
-  "total": "Total",
-  "error": "Error",
-  "success": "Éxito",
-  "loading": "Cargando...",
-  "noResults": "No se encontraron resultados",
-  "filterBy": "Filtrar por",
-  "sortBy": "Ordenar por",
-  "dashboard": "Panel de Control",
-
-  "toggleSidebar": "Alternar barra lateral",
-  "logo": "Logo",
-  "myEcommerce": "Mi E-commerce",
-  "searchProducts": "Buscar productos",
-  "allRightsReserved": "Todos los derechos reservados",
-
-  "storeInformation": "Información de la Tienda",
-  "enterStoreTitle": "Ingrese el título de la tienda",
-  "enterStoreDescription": "Ingrese la descripción de la tienda",
-  "uploadLogo": "Subir Logo",
-  "logoPreview": "Vista previa del logo",
-  "language": "Idioma",
-  "appearance": "Apariencia",
-  "saveChanges": "Guardar Cambios",
-
-  "preview": "Vista previa",
-  "previewDescription": "Así es como se verá el texto con el idioma seleccionado:",
-  "exampleText": "Este es un texto de ejemplo para mostrar cómo se verá el contenido en el idioma seleccionado.",
-  "exampleButton": "Botón de ejemplo",
-
-  "stock": "Existencias",
-  "clothing": "Ropa",
-  "books": "Libros",
-
-  "addNewProduct": "Añadir Nuevo Producto",
-  "editProduct": "Editar Producto",
-  "productName": "Nombre del Producto",
-  "description": "Descripción",
-  "category": "Categoría",
-  "selectCategory": "Seleccionar categoría",
-  "electronics": "Electrónica",
-  "jewelery": "Joyería",
-  "menClothing": "Ropa de Hombre",
-  "womenClothing": "Ropa de Mujer",
-  "productImage": "Imagen del Producto",
-  "dragDropImage": "Arrastra y suelta una imagen aquí",
-  "or": "o",
-  "browseFiles": "Explorar Archivos",
-  "update": "Actualizar",
-  "add": "Añadir",
-  "productAdded": "Producto añadido exitosamente",
-  "productUpdated": "Producto actualizado exitosamente",
-  "productDeleted": "Producto eliminado exitosamente",
-  "confirmDelete": "¿Estás seguro de que quieres eliminar este producto?",
-  "errorLoadingProducts": "Error al cargar los productos",
-  "image": "Imagen",
-  "name": "Nombre",
-  "actions": "Acciones",
-  "edit": "Editar",
-  "delete": "Eliminar",
-  "selectImage": "Seleccionar Imagen",
-  "imageSelected": "Imagen seleccionada con éxito",
-
-  "userProfile": "Perfil de Usuario",
-  "email": "Correo Electrónico",
-  "editProfile": "Editar Perfil",
-  "accountInfo": "Información de la Cuenta",
-  "memberSince": "Miembro Desde",
-  "lastLogin": "Último Inicio de Sesión",
-  "deleteAccount": "Eliminar Cuenta",
-  "profileUpdated": "Perfil Actualizado Exitosamente",
-  "updateError": "Error al Actualizar el Perfil",
-  "filters": "Filtros",
-
-  "clearFilters": "Limpiar Filtros",
-  "priceRange": "Rango de Precio",
-  "select": "Seleccionar",
-  "priceLowToHigh": "Precio: Menor a Mayor",
-  "priceHighToLow": "Precio: Mayor a Menor",
-  "nameAToZ": "Nombre: A a Z",
-  "nameZToA": "Nombre: Z a A",
-  "all": "Todos",
-
-  "usefulLinks": "Enlaces útiles",
-  "aboutUs": "Sobre nosotros",
-  "contactUs": "Contáctanos",
-  "faq": "Preguntas frecuentes",
-  "followUs": "Síguenos",
-  "termsAndConditions": "Términos y Condiciones",
-  "introduction": "Introducción",
-  "termsIntroduction": "Bienvenido a nuestra plataforma. Al acceder y utilizar este servicio, usted acepta cumplir y estar sujeto a los siguientes términos y condiciones de uso.",
-  "useOfService": "Uso del Servicio",
-  "useOfServiceDescription": "Nuestro servicio está diseñado para proporcionar una experiencia de compra en línea segura y satisfactoria. Al utilizar nuestro servicio, usted se compromete a:",
-  "useOfServiceItem1": "Proporcionar información precisa y completa al crear una cuenta o realizar una compra.",
-  "useOfServiceItem2": "Utilizar el servicio de manera ética y legal.",
-  "useOfServiceItem3": "No interferir con el funcionamiento normal del sitio web o intentar acceder a áreas restringidas.",
-  "privacyPolicy": "Política de Privacidad",
-  "privacyPolicyDescription": "Su privacidad es importante para nosotros. Consulte nuestra Política de Privacidad para entender cómo recopilamos, usamos y protegemos su información personal.",
-  "intellectualProperty": "Propiedad Intelectual",
-  "intellectualPropertyDescription": "Todo el contenido presente en este sitio web, incluyendo textos, gráficos, logotipos, imágenes y software, está protegido por derechos de autor y otras leyes de propiedad intelectual.",
-  "limitationOfLiability": "Limitación de Responsabilidad",
-  "limitationOfLiabilityDescription": "Hacemos todo lo posible para garantizar la precisión y disponibilidad de nuestro servicio, pero no podemos garantizar que esté libre de errores o interrupciones. No seremos responsables por daños indirectos, incidentales o consecuentes.",
-  "governingLaw": "Ley Aplicable",
-  "governingLawDescription": "Estos términos y condiciones se regirán e interpretarán de acuerdo con las leyes del país donde está registrada nuestra empresa, sin tener en cuenta sus disposiciones sobre conflictos de leyes.",
-  "backToHome": "Volver al inicio",
-
-  "aboutUsTitle": "Sobre Nuestra Empresa",
-  "ourHistory": "Nuestra Historia",
-  "historyText": "Fundada en [año], nuestra empresa comenzó con una idea simple: [describe la idea inicial]. Desde entonces, hemos crecido hasta convertirnos en [describe el estado actual de la empresa].",
-  "learnMore": "Saber Más",
-  "ourMission": "Nuestra Misión",
-  "missionText": "Nuestra misión es [describe la misión de tu empresa]. Nos esforzamos por [menciona los objetivos principales].",
-  "ourValues": "Nuestros Valores",
-  "teamwork": "Trabajo en Equipo",
-  "teamworkDesc": "Creemos en el poder de la colaboración y el apoyo mutuo.",
-  "innovation": "Innovación",
-  "innovationDesc": "Buscamos constantemente nuevas formas de mejorar y superar límites.",
-  "integrity": "Integridad",
-  "integrityDesc": "Mantenemos los más altos estándares de honestidad y comportamiento ético.",
-  "sustainability": "Sostenibilidad",
-  "sustainabilityDesc": "Estamos comprometidos con prácticas responsables con el medio ambiente.",
-  "joinOurTeam": "Únete a Nuestro Equipo",
-  "joinTeamText": "Siempre estamos buscando personas talentosas para unirse a nuestro equipo en crecimiento.",
-  "viewOpenings": "Ver Posiciones Abiertas",
-
-  "storeInfo": "Información de la Tienda",
-  "customerService": "Atención al Cliente",
-  "myAccount": "Mi Cuenta",
-  "socialLinks": "Redes Sociales",
-  "contact": "Contacto",
-  "address": "Dirección",
-  "phone": "Teléfono",
-  "footerTab": "Footer",
-  "addItem": "Añadir Item",
-  "url": "URL",
-  "contactInfo": "Información de Contacto"
+  "general": {
+    "sortBy": "Ordenar por",
+    "save": "Guardar",
+    "cancel": "Cancelar",
+    "edit": "Editar",
+    "delete": "Eliminar",
+    "add": "Añadir",
+    "remove": "Quitar",
+    "update": "Actualizar",
+    "loading": "Cargando...",
+    "error": "Error",
+    "success": "Éxito",
+    "search": "Buscar",
+    "filter": "Filtrar",
+    "sort": "Ordenar",
+    "all": "Todos",
+    "or": "o",
+    "select": "Seleccionar",
+    "clearFilters": "Limpiar Filtros",
+    "noResults": "No se encontraron resultados",
+    "actions": "Acciones",
+    "confirm": "Confirmar",
+    "name": "Nombre",
+    "description": "Descripción",
+    "price": "Precio",
+    "quantity": "Cantidad",
+    "total": "Total",
+    "image": "Imagen",
+    "category": "Categoría",
+    "backToHome": "Volver al inicio",
+    "icon": "Icono",
+    "title": "Título"
+  },
+  "navigation": {
+    "home": "Inicio",
+    "products": "Productos",
+    "categories": "Categorías",
+    "cart": "Carrito",
+    "account": "Cuenta",
+    "settings": "Configuración",
+    "orders": "Pedidos",
+    "dashboard": "Panel de Control",
+    "toggleSidebar": "Alternar barra lateral"
+  },
+  "auth": {
+    "login": "Iniciar Sesión",
+    "logout": "Cerrar Sesión",
+    "register": "Registrarse",
+    "profile": "Perfil",
+    "email": "Correo Electrónico",
+    "password": "Contraseña",
+    "welcome": "Bienvenido"
+  },
+  "store": {
+    "title": "Título de la Tienda",
+    "description": "Descripción de la Tienda",
+    "logo": "Logo de la Tienda",
+    "uploadLogo": "Subir Logo",
+    "logoPreview": "Vista previa del logo",
+    "myEcommerce": "Mi E-commerce",
+    "searchProducts": "Buscar productos",
+    "allRightsReserved": "Todos los derechos reservados",
+    "storeInfo": "Información de la Tienda",
+    "currency": "Moneda",
+    "language": "Idioma",
+    "mainLanguage": "Idioma Principal",
+    "appearance": "Apariencia",
+    "darkMode": "Modo Oscuro",
+    "information": "Información de la Tienda",
+    "enterTitle": "Ingrese el título de la tienda",
+    "enterDescription": "Ingrese la descripción de la tienda"
+  },
+  "language": {
+    "title": "Idioma",
+    "main": "Idioma Principal"
+  },
+  "products": {
+    "addNewProduct": "Añadir Nuevo Producto",
+    "editProduct": "Editar Producto",
+    "productName": "Nombre del Producto",
+    "productImage": "Imagen del Producto",
+    "selectCategory": "Seleccionar categoría",
+    "stock": "Existencias",
+    "addToCart": "Añadir al Carrito",
+    "removeFromCart": "Quitar del Carrito",
+    "productAdded": "Producto añadido exitosamente",
+    "productUpdated": "Producto actualizado exitosamente",
+    "productDeleted": "Producto eliminado exitosamente",
+    "confirmDelete": "¿Estás seguro de que quieres eliminar este producto?",
+    "errorLoadingProducts": "Error al cargar los productos"
+  },
+  "categories": {
+    "electronics": "Electrónica",
+    "jewelery": "Joyería",
+    "menClothing": "Ropa de Hombre",
+    "womenClothing": "Ropa de Mujer",
+    "clothing": "Ropa",
+    "books": "Libros"
+  },
+  "cart": {
+    "checkout": "Finalizar Compra"
+  },
+  "user": {
+    "userProfile": "Perfil de Usuario",
+    "editProfile": "Editar Perfil",
+    "accountInfo": "Información de la Cuenta",
+    "memberSince": "Miembro Desde",
+    "lastLogin": "Último Inicio de Sesión",
+    "deleteAccount": "Eliminar Cuenta",
+    "profileUpdated": "Perfil Actualizado Exitosamente",
+    "updateError": "Error al Actualizar el Perfil"
+  },
+  "filters": {
+    "title": "Filtros",
+    "priceRange": "Rango de Precio",
+    "minPrice": "Precio mínimo",
+    "maxPrice": "Precio máximo",
+    "priceLowToHigh": "Precio: Menor a Mayor",
+    "priceHighToLow": "Precio: Mayor a Menor",
+    "nameAToZ": "Nombre: A a Z",
+    "nameZToA": "Nombre: Z a A"
+  },
+  "footer": {
+    "usefulLinks": "Enlaces útiles",
+    "aboutUs": "Sobre nosotros",
+    "contactUs": "Contáctanos",
+    "faq": "Preguntas frecuentes",
+    "followUs": "Síguenos",
+    "termsAndConditions": "Términos y Condiciones",
+    "privacyPolicy": "Política de Privacidad",
+    "customerService": "Atención al Cliente",
+    "myAccount": "Mi Cuenta",
+    "socialLinks": "Redes Sociales",
+    "contact": "Contacto",
+    "address": "Dirección",
+    "phone": "Teléfono",
+    "footerTab": "Footer",
+    "addItem": "Añadir Item",
+    "url": "URL",
+    "contactInfo": "Información de Contacto"
+  },
+  "about": {
+    "aboutUsTitle": "Sobre Nuestra Empresa",
+    "ourHistory": "Nuestra Historia",
+    "historyText": "Fundada en [año], nuestra empresa comenzó con una idea simple: [describe la idea inicial]. Desde entonces, hemos crecido hasta convertirnos en [describe el estado actual de la empresa].",
+    "learnMore": "Saber Más",
+    "ourMission": "Nuestra Misión",
+    "missionText": "Nuestra misión es [describe la misión de tu empresa]. Nos esforzamos por [menciona los objetivos principales].",
+    "ourValues": "Nuestros Valores",
+    "teamwork": "Trabajo en Equipo",
+    "teamworkDesc": "Creemos en el poder de la colaboración y el apoyo mutuo.",
+    "innovation": "Innovación",
+    "innovationDesc": "Buscamos constantemente nuevas formas de mejorar y superar límites.",
+    "integrity": "Integridad",
+    "integrityDesc": "Mantenemos los más altos estándares de honestidad y comportamiento ético.",
+    "sustainability": "Sostenibilidad",
+    "sustainabilityDesc": "Estamos comprometidos con prácticas responsables con el medio ambiente.",
+    "joinOurTeam": "Únete a Nuestro Equipo",
+    "joinTeamText": "Siempre estamos buscando personas talentosas para unirse a nuestro equipo en crecimiento.",
+    "viewOpenings": "Ver Posiciones Abiertas"
+  },
+  "terms": {
+    "introduction": "Introducción",
+    "termsIntroduction": "Bienvenido a nuestra plataforma. Al acceder y utilizar este servicio, usted acepta cumplir y estar sujeto a los siguientes términos y condiciones de uso.",
+    "useOfService": "Uso del Servicio",
+    "useOfServiceDescription": "Nuestro servicio está diseñado para proporcionar una experiencia de compra en línea segura y satisfactoria. Al utilizar nuestro servicio, usted se compromete a:",
+    "useOfServiceItem1": "Proporcionar información precisa y completa al crear una cuenta o realizar una compra.",
+    "useOfServiceItem2": "Utilizar el servicio de manera ética y legal.",
+    "useOfServiceItem3": "No interferir con el funcionamiento normal del sitio web o intentar acceder a áreas restringidas.",
+    "privacyPolicyDescription": "Su privacidad es importante para nosotros. Consulte nuestra Política de Privacidad para entender cómo recopilamos, usamos y protegemos su información personal.",
+    "intellectualProperty": "Propiedad Intelectual",
+    "intellectualPropertyDescription": "Todo el contenido presente en este sitio web, incluyendo textos, gráficos, logotipos, imágenes y software, está protegido por derechos de autor y otras leyes de propiedad intelectual.",
+    "limitationOfLiability": "Limitación de Responsabilidad",
+    "limitationOfLiabilityDescription": "Hacemos todo lo posible para garantizar la precisión y disponibilidad de nuestro servicio, pero no podemos garantizar que esté libre de errores o interrupciones. No seremos responsables por daños indirectos, incidentales o consecuentes.",
+    "governingLaw": "Ley Aplicable",
+    "governingLawDescription": "Estos términos y condiciones se regirán e interpretarán de acuerdo con las leyes del país donde está registrada nuestra empresa, sin tener en cuenta sus disposiciones sobre conflictos de leyes."
+  },
+  "ui": {
+    "dragAndDropImage": "Arrastra y suelta una imagen aquí, o haz clic para seleccionar una",
+    "dropImageHere": "Suelta la imagen aquí...",
+    "selectImage": "seleccionar imagen",
+    "imageSelected": "Imagen seleccionada con éxito"
+  }
 }
