--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,126 +1,171 @@
 {
-  "storeTitle": "Store Title",
-  "storeDescription": "Store Description",
-  "storeLogo": "Store Logo",
-  "dropImageHere": "Drop image here ...",
-  "dragAndDropImage": "Drag and drop an image here, or click to select one",
-  "mainLanguage": "Main Language",
-  "currency": "Currency",
-  "darkMode": "Dark Mode",
-  "save": "Save",
-  "cancel": "Cancel",
-  "addToCart": "Add to Cart",
-  "removeFromCart": "Remove from Cart",
-  "checkout": "Checkout",
-  "search": "Search",
-  "login": "Login",
-  "logout": "Logout",
-  "register": "Register",
-  "profile": "Profile",
-  "settings": "Settings",
-  "products": "Products",
-  "categories": "Categories",
-  "orders": "Orders",
-  "welcome": "Welcome",
-  "price": "Price",
-  "quantity": "Quantity",
-  "total": "Total",
-  "error": "Error",
-  "success": "Success",
-  "loading": "Loading...",
-  "noResults": "No results found",
-  "filterBy": "Filter by",
-  "sortBy": "Sort by",
-  "dashboard": "Dashboard",
-
-  "toggleSidebar": "Toggle sidebar",
-  "logo": "Logo",
-  "myEcommerce": "My E-commerce",
-  "searchProducts": "Search products",
-  "allRightsReserved": "All rights reserved",
-
-  "stock": "Stock",
-  "clothing": "Clothing",
-  "books": "Books",
-
-  "addNewProduct": "Add New Product",
-  "editProduct": "Edit Product",
-  "productName": "Product Name",
-  "description": "Description",
-  "category": "Category",
-  "selectCategory": "Select category",
-  "electronics": "Electronics",
-  "jewelery": "Jewelery",
-  "menClothing": "Men's Clothing",
-  "womenClothing": "Women's Clothing",
-  "productImage": "Product Image",
-  "dragDropImage": "Drag and drop an image here",
-  "or": "or",
-  "browseFiles": "Browse Files",
-  "update": "Update",
-  "add": "Add",
-  "productAdded": "Product added successfully",
-  "productUpdated": "Product updated successfully",
-  "productDeleted": "Product deleted successfully",
-  "confirmDelete": "Are you sure you want to delete this product?",
-  "errorLoadingProducts": "Error loading products",
-  "image": "Image",
-  "name": "Name",
-  "actions": "Actions",
-  "edit": "Edit",
-  "delete": "Delete",
-  "selectImage": "Select Image",
-  "imageSelected": "Image selected successfully",
-
-  "userProfile": "User Profile",
-  "email": "Email",
-  "editProfile": "Edit Profile",
-  "saveChanges": "Save Changes",
-  "accountInfo": "Account Information",
-  "memberSince": "Member Since",
-  "lastLogin": "Last Login",
-  "deleteAccount": "Delete Account",
-  "profileUpdated": "Profile Updated Successfully",
-  "updateError": "Error Updating Profile",
-
-  "filters": "Filters",
-  "clearFilters": "Clear Filters",
-  "priceRange": "Price Range",
-  "select": "Select",
-  "priceLowToHigh": "Price: Low to High",
-  "priceHighToLow": "Price: High to Low",
-  "nameAToZ": "Name: A to Z",
-  "nameZToA": "Name: Z to A",
-  "all": "All",
-
-  "aboutUsTitle": "About Our Company",
-  "ourHistory": "Our History",
-  "historyText": "Founded in [year], our company began with a simple idea: [describe the initial idea]. Since then, we have grown to become [describe the current state of the company].",
-  "learnMore": "Learn More",
-  "ourMission": "Our Mission",
-  "missionText": "Our mission is to [describe your company's mission]. We strive to [mention main objectives].",
-  "ourValues": "Our Values",
-  "teamwork": "Teamwork",
-  "teamworkDesc": "We believe in the power of collaboration and mutual support.",
-  "innovation": "Innovation",
-  "innovationDesc": "We constantly seek new ways to improve and push boundaries.",
-  "integrity": "Integrity",
-  "integrityDesc": "We uphold the highest standards of honesty and ethical behavior.",
-  "sustainability": "Sustainability",
-  "sustainabilityDesc": "We are committed to environmentally responsible practices.",
-  "joinOurTeam": "Join Our Team",
-  "joinTeamText": "We're always looking for talented individuals to join our growing team.",
-  "viewOpenings": "View Open Positions",
-
-  "storeInfo": "Store Information",
-  "customerService": "Customer Service",
-  "myAccount": "My Account",
-  "socialLinks": "Social Links",
-  "contact": "Contact",
-  "address": "Address",
-  "phone": "Phone",
-  "footerTab": "Footer",
-  "addItem": "Add Item",
-  "url": "URL",
-  "contactInfo": "Contact Information"
+  "general": {
+    "save": "Save",
+    "cancel": "Cancel",
+    "edit": "Edit",
+    "delete": "Delete",
+    "add": "Add",
+    "remove": "Remove",
+    "update": "Update",
+    "loading": "Loading...",
+    "error": "Error",
+    "success": "Success",
+    "search": "Search",
+    "filter": "Filter",
+    "sort": "Sort",
+    "all": "All",
+    "or": "or",
+    "select": "Select",
+    "clearFilters": "Clear Filters",
+    "noResults": "No results found",
+    "actions": "Actions",
+    "confirm": "Confirm",
+    "name": "Name",
+    "description": "Description",
+    "price": "Price",
+    "quantity": "Quantity",
+    "total": "Total",
+    "image": "Image",
+    "category": "Category",
+    "backToHome": "Back to Home"
+  },
+  "navigation": {
+    "home": "Home",
+    "products": "Products",
+    "categories": "Categories",
+    "cart": "Cart",
+    "account": "Account",
+    "settings": "Settings",
+    "orders": "Orders",
+    "dashboard": "Dashboard",
+    "toggleSidebar": "Toggle Sidebar"
+  },
+  "auth": {
+    "login": "Login",
+    "logout": "Logout",
+    "register": "Register",
+    "profile": "Profile",
+    "email": "Email",
+    "password": "Password",
+    "welcome": "Welcome"
+  },
+  "store": {
+    "title": "Store Title",
+    "description": "Store Description",
+    "logo": "Store Logo",
+    "uploadLogo": "Upload Logo",
+    "logoPreview": "Logo Preview",
+    "myEcommerce": "My E-commerce",
+    "searchProducts": "Search Products",
+    "allRightsReserved": "All Rights Reserved",
+    "storeInfo": "Store Information",
+    "currency": "Currency",
+    "language": "Language",
+    "mainLanguage": "Main Language",
+    "appearance": "Appearance",
+    "darkMode": "Dark Mode"
+  },
+  "products": {
+    "addNewProduct": "Add New Product",
+    "editProduct": "Edit Product",
+    "productName": "Product Name",
+    "productImage": "Product Image",
+    "selectCategory": "Select Category",
+    "stock": "Stock",
+    "addToCart": "Add to Cart",
+    "removeFromCart": "Remove from Cart",
+    "productAdded": "Product Added Successfully",
+    "productUpdated": "Product Updated Successfully",
+    "productDeleted": "Product Deleted Successfully",
+    "confirmDelete": "Are you sure you want to delete this product?",
+    "errorLoadingProducts": "Error Loading Products"
+  },
+  "categories": {
+    "electronics": "Electronics",
+    "jewelery": "Jewelery",
+    "menClothing": "Men's Clothing",
+    "womenClothing": "Women's Clothing",
+    "clothing": "Clothing",
+    "books": "Books"
+  },
+  "cart": {
+    "checkout": "Checkout"
+  },
+  "user": {
+    "userProfile": "User Profile",
+    "editProfile": "Edit Profile",
+    "accountInfo": "Account Information",
+    "memberSince": "Member Since",
+    "lastLogin": "Last Login",
+    "deleteAccount": "Delete Account",
+    "profileUpdated": "Profile Updated Successfully",
+    "updateError": "Error Updating Profile"
+  },
+  "filters": {
+    "priceRange": "Price Range",
+    "priceLowToHigh": "Price: Low to High",
+    "priceHighToLow": "Price: High to Low",
+    "nameAToZ": "Name: A to Z",
+    "nameZToA": "Name: Z to A"
+  },
+  "footer": {
+    "usefulLinks": "Useful Links",
+    "aboutUs": "About Us",
+    "contactUs": "Contact Us",
+    "faq": "FAQ",
+    "followUs": "Follow Us",
+    "termsAndConditions": "Terms and Conditions",
+    "privacyPolicy": "Privacy Policy",
+    "customerService": "Customer Service",
+    "myAccount": "My Account",
+    "socialLinks": "Social Links",
+    "contact": "Contact",
+    "address": "Address",
+    "phone": "Phone",
+    "footerTab": "Footer",
+    "addItem": "Add Item",
+    "url": "URL",
+    "contactInfo": "Contact Information"
+  },
+  "about": {
+    "aboutUsTitle": "About Our Company",
+    "ourHistory": "Our History",
+    "historyText": "Founded in [year], our company started with a simple idea: [describe the initial idea]. Since then, we have grown to become [describe the current state of the company].",
+    "learnMore": "Learn More",
+    "ourMission": "Our Mission",
+    "missionText": "Our mission is to [describe your company's mission]. We strive to [mention main objectives].",
+    "ourValues": "Our Values",
+    "teamwork": "Teamwork",
+    "teamworkDesc": "We believe in the power of collaboration and mutual support.",
+    "innovation": "Innovation",
+    "innovationDesc": "We constantly seek new ways to improve and push boundaries.",
+    "integrity": "Integrity",
+    "integrityDesc": "We uphold the highest standards of honesty and ethical behavior.",
+    "sustainability": "Sustainability",
+    "sustainabilityDesc": "We are committed to environmentally responsible practices.",
+    "joinOurTeam": "Join Our Team",
+    "joinTeamText": "We're always looking for talented individuals to join our growing team.",
+    "viewOpenings": "View Open Positions"
+  },
+  "terms": {
+    "introduction": "Introduction",
+    "termsIntroduction": "Welcome to our platform. By accessing and using this service, you agree to comply with and be bound by the following terms and conditions of use.",
+    "useOfService": "Use of Service",
+    "useOfServiceDescription": "Our service is designed to provide a safe and satisfactory online shopping experience. By using our service, you agree to:",
+    "useOfServiceItem1": "Provide accurate and complete information when creating an account or making a purchase.",
+    "useOfServiceItem2": "Use the service in an ethical and legal manner.",
+    "useOfServiceItem3": "Not interfere with the normal operation of the website or attempt to access restricted areas.",
+    "privacyPolicyDescription": "Your privacy is important to us. Please refer to our Privacy Policy to understand how we collect, use, and protect your personal information.",
+    "intellectualProperty": "Intellectual Property",
+    "intellectualPropertyDescription": "All content present on this website, including texts, graphics, logos, images, and software, is protected by copyright and other intellectual property laws.",
+    "limitationOfLiability": "Limitation of Liability",
+    "limitationOfLiabilityDescription": "We make every effort to ensure the accuracy and availability of our service, but we cannot guarantee that it will be error-free or uninterrupted. We will not be liable for indirect, incidental, or consequential damages.",
+    "governingLaw": "Governing Law",
+    "governingLawDescription": "These terms and conditions will be governed by and interpreted in accordance with the laws of the country where our company is registered, without regard to its conflict of law provisions."
+  },
+  "ui": {
+    "dragAndDropImage": "Drag and drop an image here, or click to select",
+    "dropImageHere": "Drop the image here...",
+    "imageSelected": "Image selected successfully"
+  }
 }
