Fixed an issue that prevented error messages from being displayed for the fields.

--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -163,6 +163,7 @@
   },
   "filters": {
     "title": "Filtros",
+    "searchPlaceholder": "Búsqueda",
     "priceRange": "Rango de Precio",
     "minPrice": "Precio mínimo",
     "maxPrice": "Precio máximo",
