Fix residual filter issue; add development view notifications; implement error handling for configuration save requests; remove gradient button; optimize selects for better performance with large element counts; eliminate unnecessary elements from the configuration dashboard

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -27,7 +27,9 @@
     "total": "Total",
     "image": "Image",
     "category": "Category",
-    "backToHome": "Back to Home"
+    "backToHome": "Back to Home",
+    "inDevelopment": "View in development",
+    "noFunctionalityMessage": "This tab is currently under development and will not have functionality until further notice. We apologize for any inconvenience."
   },
   "navigation": {
     "home": "Home",
