Enhanced gradient generator, added missing translations, and integrated backend configuration loading

--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -276,5 +276,34 @@
     "dropImageHere": "Suelta la imagen aquí...",
     "selectImage": "seleccionar imagen",
     "imageSelected": "Imagen seleccionada con éxito"
+  },
+  "gradientGenerator": {
+    "clickToEdit": "Clic para editar",
+    "editGradient": "Editar Gradiente",
+    "type": "Tipo",
+    "linear": "Lineal",
+    "radial": "Radial",
+    "conic": "Cónico",
+    "direction": "Dirección",
+    "toTop": "Hacia arriba",
+    "toTopRight": "Hacia arriba-derecha",
+    "toRight": "Hacia la derecha",
+    "toBottomRight": "Hacia abajo-derecha",
+    "toBottom": "Hacia abajo",
+    "toBottomLeft": "Hacia abajo-izquierda",
+    "toLeft": "Hacia la izquierda",
+    "toTopLeft": "Hacia arriba-izquierda",
+    "shape": "Forma",
+    "circle": "Círculo",
+    "ellipse": "Elipse",
+    "extent": "Extensión",
+    "closestSide": "Lado más cercano",
+    "closestCorner": "Esquina más cercana",
+    "farthestSide": "Lado más lejano",
+    "farthestCorner": "Esquina más lejana",
+    "angle": "Ángulo",
+    "color1": "Color 1",
+    "color2": "Color 2",
+    "apply": "Aplicar"
   }
 }
