--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,5 +1,6 @@
 {
   "general": {
+    "sortBy": "Sort by",
     "save": "Save",
     "cancel": "Cancel",
     "edit": "Edit",
@@ -28,6 +29,8 @@
     "image": "Image",
     "category": "Category",
     "backToHome": "Back to Home",
+    "title": "Title",
+    "icon": "Icon",
     "inDevelopment": "View in development",
     "noFunctionalityMessage": "This tab is currently under development and will not have functionality until further notice. We apologize for any inconvenience."
   },
@@ -40,11 +43,11 @@
     "settings": "Settings",
     "orders": "Orders",
     "dashboard": "Dashboard",
-    "toggleSidebar": "Toggle Sidebar"
+    "toggleSidebar": "Toggle sidebar"
   },
   "auth": {
-    "login": "Login",
-    "logout": "Logout",
+    "login": "Log In",
+    "logout": "Log Out",
     "register": "Register",
     "profile": "Profile",
     "email": "Email",
@@ -56,62 +59,103 @@
     "description": "Store Description",
     "logo": "Store Logo",
     "uploadLogo": "Upload Logo",
-    "logoPreview": "Logo Preview",
+    "logoPreview": "Logo preview",
     "myEcommerce": "My E-commerce",
-    "searchProducts": "Search Products",
-    "allRightsReserved": "All Rights Reserved",
+    "searchProducts": "Search products",
+    "allRightsReserved": "All rights reserved",
+    "invalidPhoneNumber": "The phone number entered is not valid. Please verify that it has the correct format and try again.",
     "storeInfo": "Store Information",
     "currency": "Currency",
     "language": "Language",
     "mainLanguage": "Main Language",
     "appearance": "Appearance",
     "darkMode": "Dark Mode",
+    "information": "Store Information",
+    "enterTitle": "Enter store title",
+    "enterDescription": "Enter store description",
     "whatsappConfig": "WhatsApp Configuration",
     "whatsappNumber": "WhatsApp Number",
     "enterWhatsappNumber": "Enter the company's WhatsApp number"
+  },
+  "language": {
+    "title": "Language",
+    "main": "Main Language"
   },
   "products": {
     "addNewProduct": "Add New Product",
     "editProduct": "Edit Product",
     "productName": "Product Name",
     "productImage": "Product Image",
-    "selectCategory": "Select Category",
+    "selectCategory": "Select category",
     "stock": "Stock",
     "addToCart": "Add to Cart",
     "removeFromCart": "Remove from Cart",
-    "productAdded": "Product Added Successfully",
-    "productUpdated": "Product Updated Successfully",
-    "productDeleted": "Product Deleted Successfully",
+    "productAdded": "Product added successfully",
+    "productUpdated": "Product updated successfully",
+    "productDeleted": "Product deleted successfully",
     "confirmDelete": "Are you sure you want to delete this product?",
-    "errorLoadingProducts": "Error Loading Products",
-    "off": "DESCUENTO",
-    "details": "Detalles",
+    "errorLoadingProducts": "Error loading products",
+    "off": "DISCOUNT",
+    "details": "Details",
+    "size": "SIZE",
+    "color": "COLOR",
+    "quantity": "QUANTITY",
+    "category": "category",
+    "categories": "categories",
     "addedToCart": "Added to Cart",
     "addedToCartDescription": "The product has been added to your cart."
   },
-  "contactUs": {
-    "title": "Contact Us",
-    "sendMessage": "Send us a message",
-    "name": "Name",
-    "email": "Email",
-    "message": "Message",
-    "send": "Send",
-    "contactInfo": "Contact Information",
-    "successTitle": "Message sent",
-    "successMessage": "We will get back to you soon.",
-    "errorTitle": "Error sending message",
-    "errorMessage": "Please try again later."
-  },
   "categories": {
     "electronics": "Electronics",
-    "jewelery": "Jewelery",
+    "jewelery": "Jewelry",
     "menClothing": "Men's Clothing",
     "womenClothing": "Women's Clothing",
     "clothing": "Clothing",
     "books": "Books"
   },
+  "colors": {
+    "red": "Red",
+    "blue": "Blue",
+    "green": "Green",
+    "yellow": "Yellow",
+    "black": "Black",
+    "white": "White"
+  },
   "cart": {
     "checkout": "Checkout"
+  },
+  "design": {
+    "title": "Design",
+    "colors": "Colors",
+    "typography": "Typography",
+    "buttons": "Buttons",
+    "mainFont": "Main Font",
+    "baseFontSize": "Base Font Size",
+    "buttonColor": "Button Color",
+    "buttonTextColor": "Button Text Color",
+    "hoverOpacity": "Hover Opacity",
+    "buttonFontSize": "Button Font Size",
+    "buttonBorderRadius": "Button Border Radius",
+    "preview": "Preview",
+    "resetColors": "Reset Colors",
+    "resetTypography": "Reset Typography",
+    "resetButtons": "Reset Buttons",
+    "resetAllStyles": "Reset All Styles",
+    "generatePalette": "Generate Color Palette",
+    "paletteGenerated": "Color palette generated",
+    "previewTooltip": "This is an example of how your styles will look",
+    "enterPreviewText": "Enter text to preview",
+    "generalButton": "General Button",
+    "headerButton": "Header Button",
+    "productButton": "Product Button",
+    "cartButton": "Cart Button",
+    "backgroundColor": "Background Color",
+    "headerColor": "Header Color",
+    "headerTextColor": "Header Text Color",
+    "textColor": "Text Color",
+    "primaryColor": "Primary Color",
+    "secondaryColor": "Secondary Color",
+    "asideColor": "Sidebar Color"
   },
   "user": {
     "userProfile": "User Profile",
@@ -124,11 +168,16 @@
     "updateError": "Error Updating Profile"
   },
   "filters": {
+    "title": "Filters",
+    "searchPlaceholder": "Search",
     "priceRange": "Price Range",
+    "minPrice": "Minimum price",
+    "maxPrice": "Maximum price",
     "priceLowToHigh": "Price: Low to High",
     "priceHighToLow": "Price: High to Low",
     "nameAToZ": "Name: A to Z",
-    "nameZToA": "Name: Z to A"
+    "nameZToA": "Name: Z to A",
+    "AllCategories": "All categories"
   },
   "footer": {
     "usefulLinks": "Useful Links",
@@ -139,7 +188,7 @@
     "privacyPolicy": "Privacy Policy",
     "customerService": "Customer Service",
     "myAccount": "My Account",
-    "socialLinks": "Social Links",
+    "socialLinks": "Social Media",
     "contact": "Contact",
     "address": "Address",
     "phone": "Phone",
@@ -148,7 +197,45 @@
     "url": "URL",
     "contactInfo": "Contact Information"
   },
+  "contactUs": {
+    "title": "Contact Us",
+    "sendMessage": "Send us a message",
+    "name": "Name",
+    "email": "Email",
+    "message": "Message",
+    "send": "Send",
+    "contactInfo": "Contact Information",
+    "successTitle": "Message sent",
+    "successMessage": "We will get in touch with you soon.",
+    "errorTitle": "Error sending message",
+    "errorMessage": "Please try again later."
+  },
+  "errors": {
+    "invalidNumber": "Please enter a valid number",
+    "negativeNumber": "Price cannot be negative",
+    "minGreaterThanMax": "Minimum price cannot be greater than maximum"
+  },
+  "landingPageConfig": {
+    "titleConfig": "Home Page Configuration",
+    "heroSection": "Hero Section",
+    "heroTitle": "Hero Title",
+    "heroSubtitle": "Hero Subtitle",
+    "heroButtonText": "Hero Button Text",
+    "heroButtonColor": "Hero Button Color",
+    "heroBgGradient": "Hero Background Gradient",
+    "heroTextColor": "Hero Text Color",
+    "heroImage": "Hero Image",
+    "featuresSection": "Features Section",
+    "featuresTitle": "Features Title",
+    "featuresSubtitle": "Features Subtitle",
+    "feature": "Feature",
+    "selectedIcon": "Selected icon",
+    "title": "Title",
+    "removeFeature": "Remove Feature",
+    "addFeature": "Add Feature"
+  },
   "about": {
+    "aboutUs": "About Us",
     "aboutUsTitle": "About Our Company",
     "ourHistory": "Our History",
     "historyText": "Founded in [year], our company started with a simple idea: [describe the initial idea]. Since then, we have grown to become [describe the current state of the company].",
@@ -168,31 +255,6 @@
     "joinTeamText": "We're always looking for talented individuals to join our growing team.",
     "viewOpenings": "View Open Positions"
   },
-  "design": {
-    "title": "Design",
-    "colors": "Colors",
-    "typography": "Typography",
-    "buttons": "Buttons",
-    "mainFont": "Main Font",
-    "baseFontSize": "Base Font Size",
-    "buttonColor": "Button Color",
-    "buttonTextColor": "Button Text Color",
-    "hoverOpacity": "Hover Opacity",
-    "buttonFontSize": "Button Font Size",
-    "buttonBorderRadius": "Button Border Radius",
-    "preview": "Preview",
-    "resetColors": "Reset Colors",
-    "resetTypography": "Reset Typography",
-    "resetButtons": "Reset Buttons",
-    "resetAllStyles": "Reset All Styles",
-    "backgroundColor": "Background Color",
-    "headerColor": "Header Color",
-    "headerTextColor": "Header Text Color",
-    "textColor": "Text Color",
-    "primaryColor": "Primary Color",
-    "secondaryColor": "Secondary Color",
-    "asideColor": "Sidebar Color"
-  },
   "terms": {
     "introduction": "Introduction",
     "termsIntroduction": "Welcome to our platform. By accessing and using this service, you agree to comply with and be bound by the following terms and conditions of use.",
@@ -210,8 +272,38 @@
     "governingLawDescription": "These terms and conditions will be governed by and interpreted in accordance with the laws of the country where our company is registered, without regard to its conflict of law provisions."
   },
   "ui": {
-    "dragAndDropImage": "Drag and drop an image here, or click to select",
+    "dragAndDropImage": "Drag and drop an image here, or click to select one",
     "dropImageHere": "Drop the image here...",
+    "selectImage": "select image",
     "imageSelected": "Image selected successfully"
+  },
+  "gradientGenerator": {
+    "clickToEdit": "Click to edit",
+    "editGradient": "Edit Gradient",
+    "type": "Type",
+    "linear": "Linear",
+    "radial": "Radial",
+    "conic": "Conic",
+    "direction": "Direction",
+    "toTop": "To top",
+    "toTopRight": "To top-right",
+    "toRight": "To right",
+    "toBottomRight": "To bottom-right",
+    "toBottom": "To bottom",
+    "toBottomLeft": "To bottom-left",
+    "toLeft": "To left",
+    "toTopLeft": "To top-left",
+    "shape": "Shape",
+    "circle": "Circle",
+    "ellipse": "Ellipse",
+    "extent": "Extent",
+    "closestSide": "Closest side",
+    "closestCorner": "Closest corner",
+    "farthestSide": "Farthest side",
+    "farthestCorner": "Farthest corner",
+    "angle": "Angle",
+    "color1": "Color 1",
+    "color2": "Color 2",
+    "apply": "Apply"
   }
 }
