--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -60,7 +60,7 @@
     "logo": "Logo de la Tienda",
     "uploadLogo": "Subir Logo",
     "logoPreview": "Vista previa del logo",
-    "myEcommerce": "Mi E-commerce",
+    "myEcommerce": "eShop",
     "searchProducts": "Buscar productos",
     "allRightsReserved": "Todos los derechos reservados",
     "invalidPhoneNumber": "El número de teléfono ingresado no es válido. Por favor, verifica que tenga el formato correcto e intenta de nuevo.",
@@ -88,7 +88,7 @@
     "productImage": "Imagen del Producto",
     "selectCategory": "Seleccionar categoría",
     "stock": "Existencias",
-    "addToCart": "Añadir al Carrito",
+    "addToCart": "Añadir",
     "removeFromCart": "Quitar del Carrito",
     "productAdded": "Producto añadido exitosamente",
     "productUpdated": "Producto actualizado exitosamente",
